feat : "테스트 코드 작성 및 log crash 추가"